# wc

./: main.py  pyproject.toml
src/wc/: result.py
tests/: test_err.py  test_ok.py  test_result.py
